# git_main_pkg

./: .gitignore  .gitmodules  README.md  pyproject.toml
git_main_pkg/: __main__.py
