[tool.poetry]
name = "git_main_pkg"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <KAkikaku.tateyama@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <= 3.9"
git-sub-pkg = {path="git_main_pkg/pkgs/git_sub_pkg", develop=true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
